--- a/index.html
+++ b/index.html
@@ -3,14 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
-    <p>hola</p>
-    <p>puta</p>
-    <p> hola </p>
-    <p>golaa </p>
-    <p>cata</p>
-    <h1>titulo papa</h1>
+    <div class="container">
+        <header class="main-header">
+        </header>
+    </div>
+    <div class="grid-container">
+        <img src="../ProyectoIntegrador/imagenes/logo.jpg" alt="" srcset="">
+        <a class="titulos" href="track.html">TRACKS</a>
+        <a class="titulos" href="album.html">ALBUM</a>
+        <a class="titulos" href="artist-html">ARTIST</a>
+   </div>
+   <section class="banner">
+       <img class="banner" src="../ProyectoIntegrador/imagenes/banner.jpg" alt="banner" srcset=""> 
+   </section>
+   <section class="todos-productos">
+       <article class="tracks">
+        <ul>
+            <li><a href="" class="top-tracks"></a> <span class="titulo1"> <strong>TRACKS </strong></span> </li>
+            <li> <a href="" class="artista"></a> <span class="artistas">artista</span></li>
+            <li> <a href="" class="artista"></a> <span class="artistas">artista</span></li>
+            <li> <a href="" class="artista"></a> <span class="artistas">artista</span></li>
+        </ul>
+       </article>
+       <article class="tracks">
+        <ul>
+            <li><a href="" class="top-tracks"></a><strong>TOP ALBUMS </strong></li>
+            <li> <a href="" class="artista"></a> artista</li>
+            <li> <a href="" class="artista"></a> artista 2</li>
+            <li> <a href="" class="artista"></a> artista 3</li>
+        </ul>
+       </article>
+       <article class="tracks">
+        <ul>
+            <li><a href="" class="top-tracks"></a> <strong>TOP ARTISTS</strong></li>
+            <li> <a href="" class="artista"></a> artista</li>
+            <li> <a href="" class="artista"></a> artista 2</li>
+            <li> <a href="" class="artista"></a> artista 3</li>
+            <li> <a href="" class="artista"></a> artista 4</li>
+        </ul>
+       </article>
+   </section>
 </body>
 </html>
