--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../ProyectoIntegrador/css/index.css">
     <title>Document</title>
 </head>
 <body>
@@ -12,18 +12,18 @@
         </header>
     </div>
     <div class="grid-container">
-        <img src="../ProyectoIntegrador/imagenes/logo.jpg" alt="" srcset="">
+        <img src="../ProyectoIntegrador/img/logo.jpg" alt="logo" srcset="">
         <a class="titulos" href="track.html">TRACKS</a>
         <a class="titulos" href="album.html">ALBUM</a>
         <a class="titulos" href="artist-html">ARTIST</a>
    </div>
    <section class="banner">
-       <img class="banner" src="../ProyectoIntegrador/imagenes/banner.jpg" alt="banner" srcset=""> 
+       <img class="banner" src="../ProyectoIntegrador/img/banner.jpg" alt="banner" srcset=""> 
    </section>
    <section class="todos-productos">
        <article class="tracks">
         <ul>
-            <li><a href="" class="top-tracks"></a> <span class="titulo1"> <strong>TRACKS </strong></span> </li>
+            <li><a href="" class="top-tracks"></a> <span class="titulo1"> TRACKS </span> </li>
             <li> <a href="" class="artista"></a> <span class="artistas">artista</span></li>
             <li> <a href="" class="artista"></a> <span class="artistas">artista</span></li>
             <li> <a href="" class="artista"></a> <span class="artistas">artista</span></li>
@@ -31,7 +31,7 @@
        </article>
        <article class="tracks">
         <ul>
-            <li><a href="" class="top-tracks"></a><strong>TOP ALBUMS </strong></li>
+            <li><a href="" class="top-tracks"></a>TOP ALBUMS</li>
             <li> <a href="" class="artista"></a> artista</li>
             <li> <a href="" class="artista"></a> artista 2</li>
             <li> <a href="" class="artista"></a> artista 3</li>
@@ -39,7 +39,7 @@
        </article>
        <article class="tracks">
         <ul>
-            <li><a href="" class="top-tracks"></a> <strong>TOP ARTISTS</strong></li>
+            <li><a href="" class="top-tracks"></a>TOP ARTISTS</li>
             <li> <a href="" class="artista"></a> artista</li>
             <li> <a href="" class="artista"></a> artista 2</li>
             <li> <a href="" class="artista"></a> artista 3</li>
