--- a/index.html
+++ b/index.html
@@ -15,37 +15,37 @@
         <img src="../ProyectoIntegrador/img/logo.jpg" alt="logo" srcset="">
         <a class="titulos" href="track.html">TRACKS</a>
         <a class="titulos" href="album.html">ALBUM</a>
-        <a class="titulos" href="artist-html">ARTIST</a>
+        <a class="titulos" href="artist.html">ARTIST</a>
    </div>
    <section class="banner">
        <img class="banner" src="../ProyectoIntegrador/img/banner.jpg" alt="banner" srcset=""> 
    </section>
-   <section class="todos-productos">
-       <article class="tracks">
+   <footer class="todos">
+       <section class="tracks">
+        <h2>TOP ARTISTS</h2>
         <ul>
-            <li><a href="" class="top-tracks"></a> <span class="titulo1"> TRACKS </span> </li>
-            <li> <a href="" class="artista"></a> <span class="artistas">artista</span></li>
+            <li> <a href="detail.html" class="artista">artista</a></li>
             <li> <a href="" class="artista"></a> <span class="artistas">artista</span></li>
             <li> <a href="" class="artista"></a> <span class="artistas">artista</span></li>
         </ul>
-       </article>
-       <article class="tracks">
+       </section>
+       <section class="tracks">
+       <h2>TOP ALBUMS</h2>
         <ul>
-            <li><a href="" class="top-tracks"></a>TOP ALBUMS</li>
             <li> <a href="" class="artista"></a> artista</li>
             <li> <a href="" class="artista"></a> artista 2</li>
             <li> <a href="" class="artista"></a> artista 3</li>
         </ul>
-       </article>
-       <article class="tracks">
+       </section>
+       <section class="tracks">
+        <H2>TOP ARTISTS</H2>
         <ul>
-            <li><a href="" class="top-tracks"></a>TOP ARTISTS</li>
             <li> <a href="" class="artista"></a> artista</li>
             <li> <a href="" class="artista"></a> artista 2</li>
             <li> <a href="" class="artista"></a> artista 3</li>
             <li> <a href="" class="artista"></a> artista 4</li>
         </ul>
-       </article>
-   </section>
+       </section>
+   </footer>
 </body>
 </html>
