--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </ul>
        </section>
        <section class="tracks">
-        <H2>TOP ARTISTS</H2>
+        <H2>TOP TRACKS</H2>
         <ul>
             <li> <a href="" class="artista"></a> artista</li>
             <li> <a href="" class="artista"></a> artista 2</li>
