--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <input type="search" id="input-search" placeholder="Buscar aquí">
+    <div class="content-search">
+        <div class="content-table"></div>
+    </div>
     <div class="container">
         <header class="main-header">
         </header>
@@ -18,7 +22,7 @@
         <a class="titulos" href="artist.html">ARTIST</a>
    </div>
    <section class="banner">
-       <img class="banner" src="../ProyectoIntegrador/img/banner.jpg" alt="banner" srcset=""> 
+       <img class="banner" src="../ProyectoIntegrador/img/carrusel1.jpg" alt="banner" srcset=""> 
    </section>
    <footer class="todos">
        <section class="tracks">
