--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../ProyectoIntegrador/css/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -20,6 +21,7 @@
         <a class="titulos" href="track.html">TRACKS</a>
         <a class="titulos" href="album.html">ALBUM</a>
         <a class="titulos" href="artist.html">ARTIST</a>
+        <a class="titulos" href="playlist.html">MI PLAYLIST</a>
    </div>
    <section class="banner">
        <img class="banner" src="../ProyectoIntegrador/img/carrusel1.jpg" alt="banner" srcset=""> 
@@ -28,9 +30,9 @@
        <section class="tracks">
         <h2>TOP ARTISTS</h2>
         <ul>
+            <li> <a href="detail.html" class="artista">CAMILO</a></li>
+            <li> <a href="detail.html" class="artista">artista</a></li> 
             <li> <a href="detail.html" class="artista">artista</a></li>
-            <li> <a href="" class="artista"></a> <span class="artistas">artista</span></li>
-            <li> <a href="" class="artista"></a> <span class="artistas">artista</span></li>
         </ul>
        </section>
        <section class="tracks">
