--- a/index.html
+++ b/index.html
@@ -30,9 +30,21 @@
        <section class="tracks">
         <h2>TOP ARTISTS</h2>
         <ul>
-            <li> <a href="detail.html" class="artista">CAMILO</a></li>
-            <li> <a href="detail.html" class="artista">artista</a></li> 
-            <li> <a href="detail.html" class="artista">artista</a></li>
+            <li> <a href="detail.html" class="artista">The Weekend</a></li>
+            <li> <a href="detail.html" class="artista">Drake</a></li> 
+            <li> <a href="detail.html" class="artista">Post Malone</a></li>
+            <li> <a href="detail.html" class="artista">Dua Lipa</a></li>
+            <li> <a href="detail.html" class="artista">Justin Bieber</a></li>
+            <li> <a href="detail.html" class="artista">Bad Bunny</a></li>
+            <li> <a href="detail.html" class="artista">Twntwy One Pilots</a></li>
+            <li> <a href="detail.html" class="artista">Maroon 5</a></li>
+            <li> <a href="detail.html" class="artista">Camila Cabello</a></li>
+            <li> <a href="detail.html" class="artista">Travis Scott</a></li>
+            <li> <a href="detail.html" class="artista">Imagine Dragons</a></li>
+            <li> <a href="detail.html" class="artista">Bruno Mars</a></li>
+            <li> <a href="detail.html" class="artista">Sam Smith</a></li>
+            <li> <a href="detail.html" class="artista">J Balvin</a></li>
+            <li> <a href="detail.html" class="artista">Shawn Mendes</a></li>
         </ul>
        </section>
        <section class="tracks">
