index casi completo

--- a/detail.html
+++ b/detail.html
@@ -7,16 +7,6 @@
     <title>Detail</title>
 </head>
 <body>
-    <p>hola</p>
-    <p>estamos usando el visual</p>
-    <p>para hacer esta verga </p>
-    <ul>
-        <li>hola naty</li>
-        <li>hola valu</li>
-        <li>hola cata</li>
-        <li>son re lindas</li>
-    </ul>
-    <h1>hola pene</h1>
-    <h2>cata puta</h2>
+    <img class="weeknd" src="../ProyectoIntegrador/img/theweeknd.jpg" alt="" srcset="">
 </body>
 </html>
