--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
         </header>
     </div>
     <div class="grid-container">
-        <img src="../ProyectoIntegrador/img/logo.jpg" alt="logo" srcset="">
-        <a class="titulos" href="track.html">TRACKS</a>
-        <a class="titulos" href="album.html">ALBUM</a>
-        <a class="titulos" href="artist.html">ARTIST</a>
-        <a class="titulos" href="playlist.html">MI PLAYLIST</a>
-   </div>
+        <ul>
+        <img class="logo" src="../ProyectoIntegrador/img/logo.jpg" alt="logo" srcset="">
+        <li><a class="titulos" href="track.html">TRACKS</a></li>
+        <li><a class="titulos" href="album.html">ALBUM</a></li>
+        <li><a class="titulos" href="artist.html">ARTIST</a></li>
+        <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
+        </ul>    
+    </div>
    <section class="banner">
        <img class="banner" src="../ProyectoIntegrador/img/carrusel1.jpg" alt="banner" srcset=""> 
    </section>
@@ -30,7 +32,7 @@
        <section class="tracks">
         <h2>TOP ARTISTS</h2>
         <ul>
-            <li> <a href="detail.html" class="artista">The Weekend</a></li>
+            <li> <a href="detail.html" class="artista">The Weeknd</a></li>
             <li> <a href="detail.html" class="artista">Drake</a></li> 
             <li> <a href="detail.html" class="artista">Post Malone</a></li>
             <li> <a href="detail.html" class="artista">Dua Lipa</a></li>
@@ -65,5 +67,49 @@
         </ul>
        </section>
    </footer>
+   <section class="foto-bandas">
+       <div class="fotos">
+         <a href="detail.html"><img class="Theweeknd" src="../ProyectoIntegrador/img/theweekend.jpg" alt="Theweeknd" srcset=""></a>
+       </div>
+       <div class="fotos">
+        <a href="detail.html"><img class="Drake" src="../ProyectoIntegrador/img/drake (2).jpg" alt="drake" srcset=""></a>
+       </div>
+       <div class="PostMalone">
+        <a href="detail.html"><img src="../ProyectoIntegrador/img/postmalone.jpg" alt="postmalone" srcset=""></a>
+       </div>
+       <div class="DuaLipa">
+        <a href="detail.html"><img class="Dualipa" src="../ProyectoIntegrador/img/dualipa.jpg" alt="dualipa" srcset=""></a>
+       </div>
+       <div class="fotos">
+        <a href="detail.html"><img class="JustinBieber" src="../ProyectoIntegrador/img/justinbieber.jpg" alt="justinbieber" srcset=""></a>
+      </div>
+      <div class="fotos">
+        <a href="detail.html"><img class="Badbunny" src="../ProyectoIntegrador/img/badbunny.png" alt="badbunny" srcset=""></a>
+      </div>
+      <div class="fotos">
+        <a href="detail.html"><img class="Twenty" src="../ProyectoIntegrador/img/twentyonepilots.jpg" alt="twentyonepilots" srcset=""></a>
+      </div>
+      <div class="fotos">
+        <a href="detail.html"><img class="maroon5" src="../ProyectoIntegrador/img/maroon5 (2).jpg" alt="maroon5" srcset=""></a>
+      </div>
+      <div class="fotos">
+        <a href="detail.html"><img class="Camilacabello" src="../ProyectoIntegrador/img/camilacabello.png" alt="camilacabello" srcset=""></a>
+      </div>
+      <div class="fotos">
+        <a href="detail.html"><img class="Travisscott" src="../ProyectoIntegrador/img/travis.jpg" alt="Travisscott" srcset=""></a>
+      </div>
+      <div class="fotos">
+        <a href="detail.html"><img class="Imaginedragons" src="../ProyectoIntegrador/img/imaginedragons.jpg" alt="imaginedragons" srcset=""></a>
+      </div>
+      <div class="fotos">
+        <a href="detail.html"><img class="Brunomars" src="../ProyectoIntegrador/img/brunomars.jpg" alt="Brunomars" srcset=""></a>
+      </div>
+      <div class="fotos">
+        <a href="detail.html"><img class="Samsmith" src="../ProyectoIntegrador/img/samsmith.jpg" alt="samsmith" srcset=""></a>
+      </div>
+      <div class="fotos">
+        <a href="detail.html"><img class="jbalvin" src="../ProyectoIntegrador/img/jbalvin (2).jpg" alt="jbalvin" srcset=""></a>
+      </div>
+   </section>
 </body>
 </html>
