detail the weekend comienzo

--- a/detail.html
+++ b/detail.html
@@ -7,6 +7,13 @@
     <title>Detail</title>
 </head>
 <body>
-    <img class="weeknd" src="../ProyectoIntegrador/img/theweeknd.jpg" alt="" srcset="">
+    <header>
+        <h1 class="titulo">The Weekend</h1>
+       <img class="weeknd" src="../ProyectoIntegrador/img/theweekvalu.jpg" alt="" srcset="">
+       <ul>
+           <li class="descripcion">Descripcion the weekend</li>
+       </ul>
+    </header>
+    
 </body>
 </html>
