--- a/detail.html
+++ b/detail.html
@@ -11,9 +11,20 @@
         <h1 class="titulo">The Weekend</h1>
        <img class="weeknd" src="../ProyectoIntegrador/img/theweekvalu.jpg" alt="" srcset="">
        <ul>
-           <li class="descripcion">Descripcion the weekend</li>
+           <li class="descripcion">Abel Makkonen Tesfaye, mejor conocido por su nombre artístico The Weeknd, es un cantante, compositor y productor canadiense.
+           Tesfaye nació el 16 de febrero de 1990, en Toronto, Ontario, Canadá, y se crió en Scarborough, Él es de origen etíope, sus padres Makonnen y Samra emigraron de Etiopía en la década de 1980. Se crió escuchando una variedad de géneros musicales, incluyendo soul, quiet storm, hip hop, funk, indie rock, y post-punk.
+           </li>
        </ul>
     </header>
-    
+    <h2 class="populares">Populares</h2>
+    <div class="grid-container">
+        <ul>
+            <li>       Blinding Lights</li>
+            <li>       In Your Eyes</li>
+            <li>       After Hours</li>
+            <li>       Save Your Tears</li>
+            <li>Heartless</li>
+        </ul>
+    </div>
 </body>
 </html>
