--- a/detail.html
+++ b/detail.html
@@ -18,12 +18,31 @@
     </header>
     <h2 class="populares">Populares</h2>
     <div class="grid-container">
-        <ul>
-            <li>       Blinding Lights</li>
-            <li>       In Your Eyes</li>
-            <li>       After Hours</li>
-            <li>       Save Your Tears</li>
-            <li>Heartless</li>
+        <ul class="popular-song">
+            <li>1. Blinding Lights</li>
+            <li>2. In Your Eyes</li>
+            <li>3. After Hours</li>
+            <li>4. Save Your Tears</li>
+            <li>5. Heartless</li>
+        </ul>
+    </div>
+    <div class="album1">
+        <img class="after-hours"src="../ProyectoIntegrador/img/albumafterhours.jpg" alt="">
+        <p class="nombre-after-hours">After Hours</p>
+        <ul class="after-hrs">
+            <li>Alone Again</li>
+            <li>Too Late</li>
+            <li>Hardest to Love</li>
+            <li>Scared To Live</li>
+            <li>Snowchild</li>
+            <li>Escape From LA</li>
+            <li>Faith</li>
+            <li>Blinding Lights</li>
+            <li>In Your Eyes</li>
+            <li>Save Your Tears</li>
+            <li>Repeat After Me</li>
+            <li>After Hours</li>
+            <li>Until I Bleed Out</li>
         </ul>
     </div>
 </body>
