fotos de los albumes

--- a/detail.html
+++ b/detail.html
@@ -16,6 +16,25 @@
            </li>
        </ul>
     </header>
+    <section class="foto-albumes">
+        <div class="fotos">
+            <img class="albumes" src="../ProyectoIntegrador/img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
+        </div>
+        <div class="fotos">
+            <img class="albumes" src="../ProyectoIntegrador/img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
+        </div>
+        <div class="fotos">
+            <img class="albumes" src="../ProyectoIntegrador/img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
+        </div>
+        <div class="fotos">
+            <img class="albumes" src="../ProyectoIntegrador/img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
+        </div><div class="fotos">
+            <img class="albumes" src="../ProyectoIntegrador/img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
+        </div>
+        <div class="fotos">
+            <img class="albumes" src="../ProyectoIntegrador/img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
+        </div>
+    </section>
     <h2 class="populares">Populares</h2>
     <div class="grid-container">
         <ul class="popular-song">
@@ -42,7 +61,6 @@
             <li>Save Your Tears</li>
             <li>Repeat After Me</li>
             <li>After Hours</li>
-            <li>Until I Bleed Out</li>
         </ul>
     </div>
 </body>
