--- a/detail.html
+++ b/detail.html
@@ -7,6 +7,15 @@
     <title>Detail</title>
 </head>
 <body>
+    <div class="grid-container">
+        <ul>
+        <img class="logo" src="../ProyectoIntegrador/img/logo.jpg" alt="logo" srcset="">
+        <li><a class="titulos" href="track.html">TRACKS</a></li>
+        <li><a class="titulos" href="album.html">ALBUM</a></li>
+        <li><a class="titulos" href="artist.html">ARTIST</a></li>
+        <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
+        </ul>    
+    </div>
     <header>
         <h1 class="titulo">The Weekend</h1>
        <img class="weeknd" src="../ProyectoIntegrador/img/theweekvalu.jpg" alt="" srcset="">
@@ -31,12 +40,9 @@
         </div><div class="fotos">
             <img class="albumes" src="../ProyectoIntegrador/img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
         </div>
-        <div class="fotos">
-            <img class="albumes" src="../ProyectoIntegrador/img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
-        </div>
     </section>
     <h2 class="populares">Populares</h2>
-    <div class="grid-container">
+    <div class="container">
         <ul class="popular-song">
             <li>1. Blinding Lights</li>
             <li>2. In Your Eyes</li>
