--- a/detail.html
+++ b/detail.html
@@ -10,7 +10,7 @@
 <body>
     <div class="grid-container">
         <ul>
-        <img class="logo" src="../ProyectoIntegrador/img/logo.jpg" alt="logo" srcset="">
+        <img class="logo" src="../ProyectoIntegrador/img/logo2.jpeg" alt="logo" srcset="">
         <li><a class="titulos" href="track.html">TRACKS</a></li>
         <li><a class="titulos" href="album.html">ALBUM</a></li>
         <li><a class="titulos" href="artist.html">ARTIST</a></li>
@@ -38,7 +38,8 @@
         </div>
         <div class="fotos">
             <img class="albumes" src="../ProyectoIntegrador/img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
-        </div><div class="fotos">
+        </div>
+        <div class="fotos">
             <img class="albumes" src="../ProyectoIntegrador/img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
         </div>
     </section>
@@ -56,18 +57,18 @@
         <img class="after-hours"src="../ProyectoIntegrador/img/albumafterhours.jpg" alt="">
         <p class="nombre-after-hours">After Hours</p>
         <ul class="after-hrs">
-            <li>Alone Again</li>
-            <li>Too Late</li>
-            <li>Hardest to Love</li>
-            <li>Scared To Live</li>
-            <li>Snowchild</li>
-            <li>Escape From LA</li>
-            <li>Faith</li>
-            <li>Blinding Lights</li>
-            <li>In Your Eyes</li>
-            <li>Save Your Tears</li>
-            <li>Repeat After Me</li>
-            <li>After Hours</li>
+            <li>1. Alone Again</li>
+            <li>2. Too Late</li>
+            <li>3. Hardest to Love</li>
+            <li>4. Scared To Live</li>
+            <li>5. Snowchild</li>
+            <li>6. Escape From LA</li>
+            <li>7. Faith</li>
+            <li>8. Blinding Lights</li>
+            <li>9. In Your Eyes</li>
+            <li>10. Save Your Tears</li>
+            <li>11. Repeat After Me</li>
+            <li>12. After Hours</li>
         </ul>
     </div>
 </body>
