--- a/index.html
+++ b/index.html
@@ -46,15 +46,25 @@
             <li> <a href="detail.html" class="artista">Bruno Mars</a></li>
             <li> <a href="detail.html" class="artista">Sam Smith</a></li>
             <li> <a href="detail.html" class="artista">J Balvin</a></li>
-            <li> <a href="detail.html" class="artista">Shawn Mendes</a></li>
         </ul>
        </section>
        <section class="tracks">
        <h2>TOP ALBUMS</h2>
         <ul>
-            <li> <a href="" class="artista"></a> artista</li>
-            <li> <a href="" class="artista"></a> artista 2</li>
-            <li> <a href="" class="artista"></a> artista 3</li>
+            <li> <a href="" class="artista"></a> After Hours (Deluxe)</li>
+            <li> <a href="" class="artista"></a> Tossie Slide</li>
+            <li> <a href="" class="artista"></a> Hollywood´s Bleeding</li>
+            <li> <a href="" class="artista"></a> Futura Nostalgia</li>
+            <li> <a href="" class="artista"></a> Changes</li>
+            <li> <a href="" class="artista"></a> YHLQMDLG</li>
+            <li> <a href="" class="artista"></a> Blurryface</li>
+            <li> <a href="" class="artista"></a> Red Pill Blues (Deluxe)</li>
+            <li> <a href="" class="artista"></a> Romance</li>
+            <li> <a href="" class="artista"></a> ASTROWORLD</li>
+            <li> <a href="" class="artista"></a> Evolve</li>
+            <li> <a href="" class="artista"></a> 24K Magic</li>
+            <li> <a href="" class="artista"></a> In The Lonly Hour</li>
+            <li> <a href="" class="artista"></a> OASIS</li>
         </ul>
        </section>
        <section class="tracks">
