--- a/detail.html
+++ b/detail.html
@@ -31,16 +31,16 @@
             <img class="albumes" src="../ProyectoIntegrador/img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
         </div>
         <div class="fotos">
-            <img class="albumes" src="../ProyectoIntegrador/img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
+            <img class="albumes" src="../ProyectoIntegrador/img/beautybehind.jpg" alt="mydearmelancholy" srcset="">
         </div>
         <div class="fotos">
-            <img class="albumes" src="../ProyectoIntegrador/img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
+            <img class="albumes" src="../ProyectoIntegrador/img/kiss land.jpg" alt="mydearmelancholy" srcset="">
         </div>
         <div class="fotos">
-            <img class="albumes" src="../ProyectoIntegrador/img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
+            <img class="albumes" src="../ProyectoIntegrador/img/starboy.jpg" alt="mydearmelancholy" srcset="">
         </div>
         <div class="fotos">
-            <img class="albumes" src="../ProyectoIntegrador/img/mydearmelancholy.jpg" alt="mydearmelancholy" srcset="">
+            <img class="albumes" src="../ProyectoIntegrador/img/trilogy.jpg" alt="mydearmelancholy" srcset="">
         </div>
     </section>
     <h2 class="populares">Populares</h2>
