--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
        <section class="tracks">
        <h2>TOP ALBUMS</h2>
         <ul>
-            <li> <a href="" class="artista"></a> After Hours (Deluxe)</li>
+            <li> <a href="detail.html" class="artista">After Hours (Deluxe)</a> </li>
             <li> <a href="" class="artista"></a> Tossie Slide</li>
             <li> <a href="" class="artista"></a> Hollywood´s Bleeding</li>
             <li> <a href="" class="artista"></a> Futura Nostalgia</li>
