--- a/detail.html
+++ b/detail.html
@@ -42,6 +42,9 @@
         <div class="fotos">
             <img class="albumes" src="../ProyectoIntegrador/img/trilogy.jpg" alt="mydearmelancholy" srcset="">
         </div>
+        <div class="fotos">
+            <img class="albumes" src="../ProyectoIntegrador/img/reminder.jpg" alt="mydearmelancholy" srcset="">
+        </div>
     </section>
     <h2 class="populares">Populares</h2>
     <div class="container">
