--- a/index.html
+++ b/index.html
@@ -70,10 +70,21 @@
        <section class="tracks">
         <H2>TOP TRACKS</H2>
         <ul>
-            <li> <a href="" class="artista"></a> artista</li>
-            <li> <a href="" class="artista"></a> artista 2</li>
-            <li> <a href="" class="artista"></a> artista 3</li>
-            <li> <a href="" class="artista"></a> artista 4</li>
+            <li> <a href="" class="artista"></a> Blinding Lights</li>
+            <li> <a href="" class="artista"></a> Tossie Slide</li>
+            <li> <a href="" class="artista"></a> Circles </li>
+            <li> <a href="" class="artista"></a> Don´t Start Now</li>
+            <li> <a href="" class="artista"></a> Intentions (Feat. Quavo)</li>
+            <li> <a href="" class="artista"></a> Safarera</li>
+            <li> <a href="" class="artista"></a> Level of Concern </li>
+            <li> <a href="" class="artista"></a> Memories </li>
+            <li> <a href="" class="artista"></a> My Oh My (Feat. DaBaby)</li>
+            <li> <a href="" class="artista"></a> HIGHEST IN THE ROOM</li>
+            <li> <a href="" class="artista"></a> Beliver </li>
+            <li> <a href="" class="artista"></a> When I Was Your Man</li>
+            <li> <a href="" class="artista"></a> To Die For</li>
+            <li> <a href="" class="artista"></a> RITMO (Bad Boys For Life)</li>
+            
         </ul>
        </section>
    </footer>
