--- a/detail.html
+++ b/detail.html
@@ -10,7 +10,7 @@
 <body>
     <div class="grid-container">
         <ul>
-        <img class="logo" src="../ProyectoIntegrador/img/logo2.jpeg" alt="logo" srcset="">
+        <a href="index.html"><img class="logo" src="../ProyectoIntegrador/img/logo2.jpeg" alt="logo" srcset=""></a>
         <li><a class="titulos" href="track.html">TRACKS</a></li>
         <li><a class="titulos" href="album.html">ALBUM</a></li>
         <li><a class="titulos" href="artist.html">ARTIST</a></li>
