comienzo pagina playlist

--- a/playlist.html
+++ b/playlist.html
@@ -3,10 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../ProyectoIntegrador/playlist.css">
+    <link rel="stylesheet" href="../ProyectoIntegrador/css/playlist.css">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
     <title>Playlist</title>
 </head>
 <body>
-    
+</div>
+<div class="container">
+    <header class="main-header">
+    </header>
+</div>
+<div class="grid-container">
+    <ul>
+    <img class="logo" src="../ProyectoIntegrador/img/logo2.jpeg" alt="logo" srcset="">
+    <li><a class="titulos" href="track.html">TRACKS</a></li>
+    <li><a class="titulos" href="album.html">ALBUM</a></li>
+    <li><a class="titulos" href="artist.html">ARTIST</a></li>
+    <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
+    </ul>   
+<div class="canciones"> 
+</div>
+<div class="playlist">
+    <h2>MY PLAYLIST</h2>
+</div>
+<div class="img-playlist">
+    <img src="../ProyectoIntegrador/img/jbalvin (2).jpg" alt="J Balvin">
+<h2>LA CANCIÓN</h2>
+<p>OASIS - J Balvin</p>
+</div>
+</div> 
 </body>
 </html>
