--- a/playlist.html
+++ b/playlist.html
@@ -27,9 +27,11 @@
     <h2>MY PLAYLIST</h2>
 </div>
 <div class="img-playlist">
-    <img src="../ProyectoIntegrador/img/jbalvin (2).jpg" alt="J Balvin">
-<h2>LA CANCIÓN</h2>
-<p>OASIS - J Balvin</p>
+    <img class="foto-jbalvin" src="../ProyectoIntegrador/img/jbalvin (2).jpg" alt="J Balvin">
+</div>
+<div class="info-playlist">
+    <h2>LA CANCIÓN</h2>
+    <p>OASIS - J Balvin</p>
 </div>
 </div> 
 </body>
