--- a/detail.html
+++ b/detail.html
@@ -11,9 +11,9 @@
     <div class="grid-container">
         <ul>
         <a href="index.html"><img class="logo" src="../ProyectoIntegrador/img/logo2.jpeg" alt="logo" srcset=""></a>
-        <li><a class="titulos" href="track.html">TRACKS</a></li>
-        <li><a class="titulos" href="album.html">ALBUM</a></li>
-        <li><a class="titulos" href="artist.html">ARTIST</a></li>
+        <li><a class="titulos" href="detail.html">TRACKS</a></li>
+        <li><a class="titulos" href="detail.html">ALBUM</a></li>
+        <li><a class="titulos" href="detail.html">ARTIST</a></li>
         <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
         </ul>    
     </div>
