--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="grid-container">
         <ul>
         <img class="logo" src="../ProyectoIntegrador/img/logo2.jpeg" alt="logo" srcset="">
-        <li><a class="titulos" href="track.html">TRACKS</a></li>
-        <li><a class="titulos" href="album.html">ALBUM</a></li>
-        <li><a class="titulos" href="artist.html">ARTIST</a></li>
+        <li><a class="titulos" href="detail.html">TRACKS</a></li>
+        <li><a class="titulos" href="detail.html">ALBUM</a></li>
+        <li><a class="titulos" href="detail.html">ARTIST</a></li>
         <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
         </ul>    
     </div>
