--- a/playlist.html
+++ b/playlist.html
@@ -15,24 +15,30 @@
 </div>
 <div class="grid-container">
     <ul>
-    <img class="logo" src="../ProyectoIntegrador/img/logo2.jpeg" alt="logo" srcset="">
-    <li><a class="titulos" href="track.html">TRACKS</a></li>
-    <li><a class="titulos" href="album.html">ALBUM</a></li>
-    <li><a class="titulos" href="artist.html">ARTIST</a></li>
-    <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
+    <a href="index.html"><img class="logo" src="../ProyectoIntegrador/img/logo2.jpeg" alt="logo" srcset="">
+        <li><a class="titulos" href="detail.html">TRACKS</a></li>
+        <li><a class="titulos" href="detail.html">ALBUM</a></li>
+        <li><a class="titulos" href="detail.html">ARTIST</a></li>
+        <li><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
     </ul>   
-<div class="canciones"> 
-</div>
 <div class="playlist">
     <h2>MY PLAYLIST</h2>
 </div>
-<div class="img-playlist">
-    <img class="foto-jbalvin" src="../ProyectoIntegrador/img/jbalvin (2).jpg" alt="J Balvin">
+<div class="playlist">
+    <ul>
+    <img class= "fotoartista" src="" alt="" srcset="">
+    <li class="encabezado">Canción</li>
+    <li class="encabezado">Artista </li>
+    <li class="encabezado">album</li>
+    <li class="puntos"></li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/jbalvin (2).jpg" alt="jbalvin" srcset="">
+    <li>LA CANCIÓN</li>
+    <li>J. Balvin </li>
+    <li>OASIS</li>
+    <li class="puntos">...</li>
+    </ul>    
 </div>
-<div class="info-playlist">
-    <h2>LA CANCIÓN</h2>
-    <p>OASIS - J Balvin</p>
+</section>
 </div>
-</div> 
 </body>
 </html>
