--- a/playlist.html
+++ b/playlist.html
@@ -29,13 +29,109 @@
     <img class= "fotoartista" src="" alt="" srcset="">
     <li class="encabezado">Canción</li>
     <li class="encabezado">Artista </li>
-    <li class="encabezado">album</li>
+    <li class="encabezado">Album</li>
     <li class="puntos"></li>
     <img class="fotoartista" src="../ProyectoIntegrador/img/jbalvin (2).jpg" alt="jbalvin" srcset="">
     <li>LA CANCIÓN</li>
-    <li>J. Balvin </li>
+    <li>J. Balvin</li>
     <li>OASIS</li>
     <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/badbunny.png" alt="badbunny" srcset="">
+    <li>Vete</li>
+    <li>Bad Bunny</li>
+    <li>YHLQMDLG</li>
+    <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/justinbieber.jpg" alt="justinbieber" srcset="">
+    <li>All Around Me</li>
+    <li>Justin Bieber </li>
+    <li>Changes</li>
+    <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/camilacabello.png" alt="camilacabello" srcset="">
+    <li>She Loves Control</li>
+    <li>Camila Cabello </li>
+    <li>Camila</li>
+    <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/imaginedragons.jpg" alt="imaginedragons" srcset="">
+    <li>Next To Me</li>
+    <li>Imagine Dragons </li>
+    <li>Evolve</li>
+    <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/postmalone.jpg" alt="postmalone" srcset="">
+    <li>Big Lie</li>
+    <li>Post Malone</li>
+    <li>Stoney (Deluxe)</li>
+    <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/samsmith.jpg" alt="samsmith" srcset="">
+    <li>Stay With Me</li>
+    <li>Sam Smith</li>
+    <li>In The Lonely Hour</li>
+    <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/shawnmendez.jpg" alt="shawnmendez" srcset="">
+    <li>Ruin</li>
+    <li>Shawn Mendes</li>
+    <li>Illuminate (Deluxe)</li>
+    <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/albumafterhours.jpg" alt="theweekend" srcset="">
+    <li>Alone Again</li>
+    <li>The Weeknd</li>
+    <li>After Hours</li>
+    <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/travis.jpg" alt="travis" srcset="">
+    <li>STARGAZING</li>
+    <li>Travis Scott</li>
+    <li>ASTROWORLD</li>
+    <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/jbalvin (2).jpg" alt="jbalvin" srcset="">
+    <li>COMO UN BEBÉ</li>
+    <li>J. Balvin</li>
+    <li>OASIS</li>
+    <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/dualipa.jpg" alt="dualipa" srcset="">
+    <li>Genesis</li>
+    <li>Dua Lipa</li>
+    <li>Dua Lipa (Deluxe)</li>
+    <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/drake (2).jpg" alt="drake" srcset="">
+    <li>Survival</li>
+    <li>Drake</li>
+    <li>Scorpion</li>
+    <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/brunomars.jpg" alt="brunomars" srcset="">
+    <li>Finesse</li>
+    <li>Bruno Mars</li>
+    <li>24K Magic</li>
+    <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/twentyonepilots.jpg" alt="twentyonepilots" srcset="">
+    <li>Stressed Out</li>
+    <li>Twenty One Pilots</li>
+    <li>Blurryface</li>
+    <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/trilogy.jpg" alt="trilogy" srcset="">
+    <li>High For This</li>
+    <li>The Weeknd</li>
+    <li>Trilogy</li>
+    <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/badbunny.png" alt="badbunny" srcset="">
+    <li>NI BIEN NI MAL</li>
+    <li>Bad Bunny</li>
+    <li>X100PRE</li>
+    <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/justinbieber.jpg" alt="justinbieber" srcset="">
+    <li>Habitual</li>
+    <li>Justin Bieber</li>
+    <li>Changes</li>
+    <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/camilacabello.png" alt="camilacabello" srcset="">
+    <li>Never Be the Same</li>
+    <li>Camila Cabello</li>
+    <li>Camila</li>
+    <li class="puntos">...</li>
+    <img class="fotoartista" src="../ProyectoIntegrador/img/samsmith.jpg" alt="samsmith" srcset="">
+    <li>I'm Not The Only One</li>
+    <li>Sam Smith</li>
+    <li>In The Lonely Hour</li>
+    <li class="puntos">...</li>
+
     </ul>    
 </div>
 </section>
