--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
             <li> <a href="" class="artista"></a> ASTROWORLD</li>
             <li> <a href="" class="artista"></a> Evolve</li>
             <li> <a href="" class="artista"></a> 24K Magic</li>
-            <li> <a href="" class="artista"></a> In The Lonly Hour</li>
+            <li> <a href="" class="artista"></a> In The Lonely Hour</li>
             <li> <a href="" class="artista"></a> OASIS</li>
         </ul>
        </section>
        <section class="tracks">
         <H2>TOP TRACKS</H2>
         <ul>
-            <li> <a href="" class="artista"></a> Blinding Lights</li>
+            <li> <a href="detail.html" class="artista">Blinding Lights</a></li>
             <li> <a href="" class="artista"></a> Tossie Slide</li>
             <li> <a href="" class="artista"></a> Circles </li>
             <li> <a href="" class="artista"></a> Don´t Start Now</li>
